# longcat

./: Cargo.toml  README.md  flake.nix
.cargo/: config.toml
src/: main.rs
src/game/: atlas.rs  cat.rs  control.rs  food.rs  grid.rs  level.rs  mod.rs  ticktimer.rs
src/menus/: main.rs  mod.rs  navigate.rs  over.rs  pause.rs
src/screens/: gameplay.rs  mod.rs  over.rs  pause.rs  title.rs
src/ui/: button.rs  mod.rs
