[package]
name = "longcat"
version = "0.1.0"
edition = "2024"

[features]
dev = ["bevy/bevy_dev_tools", "bevy/dynamic_linking"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[dependencies]
rand = "0.9.2"

[dependencies.bevy]
version = "0.16"
default-features = false
features = [
	"bevy_asset",
	"bevy_color",
	"bevy_core_pipeline",
	"bevy_image",
	"bevy_input_focus",
	"bevy_picking",
	"bevy_ui_picking_backend",
	"bevy_log",
	"bevy_render",
	"bevy_sprite",
	"bevy_state",
	"bevy_text",
	"bevy_ui",
	"bevy_window",
	"bevy_winit",
	"default_font",
	"multi_threaded",
	"std",
	"png",
	"wayland",
]
